<resources>
    <string name="app_name">Fit Elite</string>
    <string name="loginTitle">Login</string>
    <string name="loginButtonText">Sign In</string>
    <string name="loginRegisterText">Do not have an account? Register!</string>
    <string name="loginPassword">Enter Password…</string>
    <string name="loginEmail">Enter Email…</string>
    <string name="registerEmailText">Email</string>
    <string name="registerPasswordText">Password</string>
    <string name="registerNameText">Name</string>
    <string name="registerSurnameText">Surname</string>
    <string name="registerAgeText">Age</string>
    <string name="registerWeightText">Weight</string>
    <string name="registerPasswordTextText">Height</string>
    <string name="registerTitleText">Register</string>
    <string name="registerLogInText">Already registered? Login!</string>
    <string name="registerButtonText">Sign Up</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="date_of_birth">Date of Birth</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
