<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sergi.fitelite.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextEmail"
            android:inputType="textEmailAddress"
            android:hint="@string/loginEmail"
            android:layout_margin="20dp"
            android:textSize="15sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:inputType="textPassword"
            android:hint="@string/loginPassword"
            android:id="@+id/editTextPassword"
            android:textSize="15sp"/>

    </LinearLayout>

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_above="@id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginTitle"
        android:textSize="22sp"
        android:layout_marginTop="22dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:id="@+id/loginButton"
        android:text="@string/loginButtonText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:id="@+id/registerText"
        android:text="@string/loginRegisterText"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        />

</RelativeLayout>
